--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Danielle Merrick</title>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="StyleSheet.css" />
 </head>
 
 <body>
