add in some information

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <a class="active" href="index.html">Home</a>
         <a href="About.html">About Me</a>
     </div>
+
+    <h2>Purpose:</h2>
+    <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
+
+    <h2>Introduction</h2>
+    <p>Welcome, my name is Danielle Merrick and I am currently a senior at the University of Oklahoma.</p>
+
 </body>
 
 </html>
