--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <a href="About.html">About Me</a>
     </div>
 
+    <img scr="images/IMG_9055.jpg" />
+
     <h2>Purpose:</h2>
     <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
 
