--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="topbav">
+    <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="About.html">About Me</a>
     </div>
