--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <title>Danielle Merrick</title>
     <link rel="stylesheet" href="StyleSheet.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bad+Script" />
 </head>
 
 <body>
@@ -21,8 +22,10 @@
     <h2>Purpose:</h2>
     <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
 
-    <h2>Introduction</h2>
-    <p>Welcome, my name is Danielle Merrick and I am currently a senior at the University of Oklahoma.</p>
+    <div id="Intro">
+        <h2>Introduction</h2>
+        <p>Welcome, my name is Danielle Merrick and I am currently a senior at the University of Oklahoma.</p>
+    </div>
 
 </body>
 
