--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8" />
     <title>Danielle Merrick</title>
     <link rel="stylesheet" href="StyleSheet.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bad+Script" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" />
 </head>
 
 <body>
