--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Danielle Merrick</title>
     <link rel="stylesheet" href="StyleSheet.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Marvel&display=swap" />
 </head>
 
 <body>
@@ -20,12 +20,18 @@
 
     <img scr="images/IMG_9055.jpg" />
 
-    <h2>Purpose:</h2>
-    <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
+    <div id="Purpose">
+        <h2>Purpose:</h2>
+        <div id="PurposeInfo">
+            <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
+        </div>
+    </div>
 
     <div id="Intro">
         <h2>Introduction</h2>
-        <p>Welcome, my name is Danielle Merrick and I am currently a senior at the University of Oklahoma.</p>
+        <div id="IntroInfo">
+            <p>Welcome, my name is Danielle Merrick and I am currently a senior at the University of Oklahoma.</p>
+        </div>
     </div>
 
 </body>
