--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div id="Intro">
         <h2>Introduction</h2>
         <div id="IntroInfo">
-            <p>Welcome, my name is Danielle Merrick and I am currently a senior at the University of Oklahoma.</p>
+            <p>Hi, my name is Danielle and I am currently a student at the University of Oklahoma (OU). During my time here I have been to learn, accomplish,
+            and growth through being active and involved on campus. To learn more, click on the About Me tab.</p>
         </div>
     </div>
 
