Added info to about me page

--- a/About.html
+++ b/About.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8" />
     <title>Danielle Merrick</title>
     <link rel="stylesheet" href="StyleSheet.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Marvel&display=swap" />
 </head>
 
 <body>
@@ -16,9 +18,16 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <h2>A Little Bit About Me:</h2>
-    <p>Orginally from TExas, but came to OU for a new start and a way to grow as an individual on my own. At the university, I am majoring in
-    International Business and Management Information Systems.</p>
+    <div id="AboutMeTitle">
+        <h2>A Little Bit About Me</h2>
+        <div id="AboutMeInfo">
+            <p>Originally I am from Texas, but decided to attend OU as a way to grow as an individual. At the university, I am majoring in International Business 
+            and Management Information Systems while as being in the accelerated master program for Management Information Technology. Currently, I am a senior and 
+            plan on graduating in May of 2022 after completing my Bachelor's and Master's as part of the accelerated program. In my years here, I have had many of 
+            opportunities to get involved and be active on campus. I am involved and a memeber of Delta Sigma Pi and JCPenney Leadership Program and in past years 
+            been active with CAC Concert Series and Howdy Week. Along with on campus involvement, I have also studied abroad twice in Peru and Barcelona, Spain.</p>
+        </div>
+    </div>
 
 </body>
 
