--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img scr="images/IMG_9055.jpg" />
 
     <div id="Purpose">
-        <h2>Purpose:</h2>
+        <h2>Purpose</h2>
         <div id="PurposeInfo">
             <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
         </div>
