--- a/Projects.html
+++ b/Projects.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8" />
     <title>Danielle Merrick</title>
     <link rel="stylesheet" href="StyleSheet.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Marvel&display=swap" />
 </head>
 
 <body>
