added images to AB

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <img scr="images/IMG_9055.jpg" />
+    <img id="Headshot" scr="images/IMG_9055.jpg" />
 
     <div id="Purpose">
         <h2>Purpose</h2>
