--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <img id="Headshot" scr="images/IMG_9055.jpg" />
+    <div id="Headshot">
+        <img scr="images/IMG_9055.jpg" />
+    </div>
 
     <div id="Purpose">
         <h2>Purpose</h2>
