--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
         <img scr="images/IMG_9055.jpg" />
     </div>
 
-    <div id="Purpose">
-        <h2>Purpose</h2>
-        <div id="PurposeInfo">
-            <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
+    <div id="Info">
+        <div id="Purpose">
+            <h2>Purpose</h2>
+            <div id="PurposeInfo">
+                <p>This site was created to display my knowledge in Programming along with showing my accomplishments throughout my college career.</p>
+            </div>
         </div>
-    </div>
 
-    <div id="Intro">
-        <h2>Introduction</h2>
-        <div id="IntroInfo">
-            <p>Hi, my name is Danielle and I am currently a student at the University of Oklahoma (OU). During my time here I have been to learn, accomplish,
-            and growth through being active and involved on campus. To learn more, click on the About Me tab.</p>
+        <div id="Intro">
+            <h2>Introduction</h2>
+            <div id="IntroInfo">
+                <p>Hi, my name is Danielle and I am currently a student at the University of Oklahoma (OU). During my time here I have been to learn, accomplish,
+                and growth through being active and involved on campus. To learn more, click on the About Me tab.</p>
+            </div>
         </div>
     </div>
 
