--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="StyleSheet.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Marvel&display=swap" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font=awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -16,9 +17,10 @@
         <a href="About.html">About Me</a>
         <a href="Projects.html">Projects</a>
         <a href="SkillSets.html">Skill Sets</a>
+        <a href="https://linkedin.com/in/danielle-merrick/" class="fa fa-linkedin"></a>
     </div>
 
-        <img id="Headshot" scr="images/IMG_9055.jpg" />
+    <img id="Headshot" scr="images/IMG_9055.jpg" />
 
     <div id="Purpose">
         <h2>Purpose</h2>
