--- a/SkillSets.html
+++ b/SkillSets.html
@@ -18,6 +18,18 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
+    <div id="Skills">
+        <h2>Skill Sets</h2>
+        <div id="SkillsInfo">
+            <p>These skill sets were developed from professional events through organizations and 
+            classes. Skills developed:</p>
+            <ul>
+                <li>C#</li>
+                <li>SQL</li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 
 </html>
