--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <img id="Headshot" scr="images/IMG_9055.jpg" />
 
+    <div id="Writing">
     <div id="Purpose">
         <h2>Purpose</h2>
         <div id="PurposeInfo">
@@ -33,6 +34,7 @@
             <p>Hi, my name is Danielle and I am currently a student at the University of Oklahoma (OU). During my time here I have been to learn, accomplish,
             and growth through being active and involved on campus. To learn more, click on the About Me tab.</p>
         </div>
+    </div>
     </div>
 
 </body>
