--- a/Projects.html
+++ b/Projects.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="Project">
-        <h2>Project Accomplished</h2>
+        <h2>Projects Accomplished</h2>
         <div id="ProjectInfo">
             <h4>Database Project</h4>
             <p>
