--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             and growth through being active and involved on campus. To learn more, click on the About Me tab.</p>
         </div>
     </div>
+    <div id="Social">
+        <h2>Connect With Me</h2>
+        <div id="SocialInfo">
+            <p>Connect with me on LinkedIn: https://www.linkedin.com/in/danielle-merrick/ </p>
+        </div>
+    </div>
     </div>
 
 </body>
