--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <img id="Headshot" scr="images/IMG_9055.jpg" />
+    <img id="Headshot" scr="https://drive.google.com/file/d/1hP1pZNHcPaHA5TcnmxBV6GAsDx13nqIe/view?usp=sharing" />
 
     <div id="Writing">
     <div id="Purpose">
