changed width and added pics

--- a/SkillSets.html
+++ b/SkillSets.html
@@ -18,12 +18,18 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
+    <img id="SS1" scr="https://www.alhambra.org/img/visitas/2.jpg" />
+    <img id="SS2" scr="https://www.alhambra.org/img/visitas/2.jpg" />
+    
     <div id="Skills">
         <h2>Skill Sets</h2>
         <div id="SkillsInfo">
             <p>These skill sets were developed from professional events through organizations and 
             classes. Skills developed:</p>
             <ul>
+                <li>Microsoft Excel</li>
+                <li>Microsoft Word</li>
+                <li>Microsoft PowerPoint</li>
                 <li>C#</li>
                 <li>SQL</li>
             </ul>
