--- a/SkillSets.html
+++ b/SkillSets.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Danielle Merrick</title>
+    <title>Danielle Merrick 2020</title>
     <link rel="stylesheet" href="StyleSheet.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Marvel&display=swap" />
