--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="Social">
         <h2>Connect With Me</h2>
         <div id="SocialInfo">
-            <p>Connect with me on LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/danielle-merrick/"></a>https://www.linkedin.com/in/danielle-merrick/ </p>
+            <p>Connect with me on LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/danielle-merrick/">https://www.linkedin.com/in/danielle-merrick/</a></p>
         </div>
     </div>
     </div>
