finished all the writing.

--- a/SkillSets.html
+++ b/SkillSets.html
@@ -24,8 +24,9 @@
     <div id="Skills">
         <h2>Skill Sets</h2>
         <div id="SkillsInfo">
-            <p>These skill sets were developed from professional events through organizations and 
-            classes. Skills developed:</p>
+            <p>These skill sets were developed while taking class that are apart of my major's curriculum. 
+            Classes include Personal Computing Prod Tools, Computer Based Info System I, Databases, and Programming I and II. 
+            Skills developed:</p>
             <ul>
                 <li>Microsoft Excel</li>
                 <li>Microsoft Word</li>
@@ -33,6 +34,9 @@
                 <li>C#</li>
                 <li>SQL</li>
             </ul>
+            <p>This is not all skills, as I have also learned how to use other softwares such as Smartsheets, but are the ones
+            I regularly use. Along with learning programming languages and softwares, I have also been able to expand upon my interpersonal skills 
+            while learning how to speak Spanish (beginner).</p>
         </div>
     </div>
 
