updated the photos used

--- a/SkillSets.html
+++ b/SkillSets.html
@@ -18,8 +18,8 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <img id="SS1" scr="https://www.alhambra.org/img/visitas/2.jpg" />
-    <img id="SS2" scr="https://www.alhambra.org/img/visitas/2.jpg" />
+    <img id="SS1" scr="https://www.tripsavvy.com/thmb/l-nzfEDJQQzj-QUzDDOxjRoe_sk=/2127x1409/filters:fill(auto,1)/GettyImages-696006726-121103176b9d4f5e8ddb431c5198ea5f.jpg" />
+    <img id="SS2" scr="https://www.tourism-review.com/temp/aktualita-related-list_tmb_53.png?v=1502277821" />
     
     <div id="Skills">
         <h2>Skill Sets</h2>
