amost done with website

--- a/SkillSets.html
+++ b/SkillSets.html
@@ -18,8 +18,8 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <img id="SS1" scr="https://www.tripsavvy.com/thmb/l-nzfEDJQQzj-QUzDDOxjRoe_sk=/2127x1409/filters:fill(auto,1)/GettyImages-696006726-121103176b9d4f5e8ddb431c5198ea5f.jpg" />
-    <img id="SS2" scr="https://www.tourism-review.com/temp/aktualita-related-list_tmb_53.png?v=1502277821" />
+    <img id="SS1" scr="http://1.bp.blogspot.com/-tGbePA5oYTk/Tb6R-hlO4uI/AAAAAAAAAFw/y5_MGnsvPVA/s1600/cardiff+castle.jpg" />
+    <img id="SS2" scr="https://www.theoriginaltour.com/sites/default/files/inline-images/big-ben-bong-bong.jpg" />
     
     <div id="Skills">
         <h2>Skill Sets</h2>
