--- a/SkillSets.html
+++ b/SkillSets.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -17,9 +17,9 @@
         <a href="Projects.html">Projects</a>
         <a href="SkillSets.html">Skill Sets</a>
     </div>
-
-    <img id="SS1" scr="http://1.bp.blogspot.com/-tGbePA5oYTk/Tb6R-hlO4uI/AAAAAAAAAFw/y5_MGnsvPVA/s1600/cardiff+castle.jpg" />
-    <img id="SS2" scr="https://www.theoriginaltour.com/sites/default/files/inline-images/big-ben-bong-bong.jpg" />
+    
+    <img id="SS1" scr="http://1.bp.blogspot.com/-tGbePA5oYTk/Tb6R-hlO4uI/AAAAAAAAAFw/y5_MGnsvPVA/s1600/cardiff+castle.jpg" alt="Cardiff Castle" />
+    <img id="SS2" scr="https://www.theoriginaltour.com/sites/default/files/inline-images/big-ben-bong-bong.jpg" alt="Big Ben" />
     
     <div id="Skills">
         <h2>Skill Sets</h2>
