--- a/About.html
+++ b/About.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -26,10 +26,10 @@
         <h2>A Little Bit About Me</h2>
         <div id="AboutMeInfo">
             <p>Originally I am from Texas, but decided to attend OU as a way to grow as an individual. At the university, I am majoring in International Business 
-            and Management Information Systems while as being in the accelerated master program for Management Information Technology. Currently, I am a senior and 
+            and Management Information Systems while also being in the accelerated master program for Management Information Technology. Currently, I am a senior and 
             plan on graduating in May of 2022 after completing my Bachelor's and Master's as part of the accelerated program. In my years here, I have had many of 
-            opportunities to get involved and be active on campus. I am involved and a memeber of Delta Sigma Pi and JCPenney Leadership Program and in past years 
-            been active with CAC Concert Series and Howdy Week. Along with on campus involvement, I have also studied abroad twice in Peru and Barcelona, Spain.</p>
+            opportunities to get involved and be active on campus. I am involved in and a memeber of Delta Sigma Pi and JCPenney Leadership Program and in past years 
+            been active with CAC Concert Series and Howdy Week. Along with on campus involvement, I have also studied abroad twice, in Peru and Barcelona, Spain.</p>
         </div>
     </div>
 
