--- a/Projects.html
+++ b/Projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -31,7 +31,7 @@
                 there was a project manager, two programmers, and two database specialist, where I
                 was a database specialist. My responsiblities included making the database where the information
                 would be stored. To create the database, I had to create an ERD to display the tables, their relation
-                to each other and the different attributes the table had. The creation of the ERD are apart of the conceptual
+                to each other and the different attributes the table had. The creation of the ERD is apart of the conceptual
                 design and the first part of the process in creating a database. Once this process is done, the next step is
                 the logical design which is when the normalization happens and the tables in the ERD are checked to be in 3NF.
                 The last step in the process is physical design where the data dictionary is created and the CREATE TABLE statements are done.
