--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 
@@ -32,7 +32,7 @@
         <h2>Introduction</h2>
         <div id="IntroInfo">
             <p>Hi, my name is Danielle and I am currently a student at the University of Oklahoma (OU). During my time here I have been to learn, accomplish,
-            and growth through being active and involved on campus. To learn more, click on the About Me tab.</p>
+            and grow through being active and involved on campus. To learn more, click on the About Me tab.</p>
         </div>
     </div>
     <div id="Social">
