see if this fixes the pictures

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="SkillSets.html">Skill Sets</a>
     </div>
 
-    <img id="Headshot" scr="IMG_9055.jpg" alt="Professional Headshot" />
+    <img id="Headshot" src="/IMG_9055.jpg" alt="Professional Headshot" />
 
     <div id="Writing">
     <div id="Purpose">
